Add pt translations wip. Add selectbox to pick locale

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -7,5 +7,12 @@
     "logout": "Log out",
     "login": "Log in",
     "register": "Register"
+  },
+  "login": {
+    "username": "Username",
+    "password": "Password",
+    "login": "Login",
+    "register": "Register",
+    "forgot_password": "Forgot your password?"
   }
 }
