--- a/frontend/src/locales/pt.json
+++ b/frontend/src/locales/pt.json
@@ -60,5 +60,13 @@
       "firstName": "Nome:",
       "lastName": "Sobrenome:",
       "email": "Email:"
+    },
+    "imageToTextExercise": {
+      "imageToText": "Exercício: Imagem para Texto",
+      "correctMessage": "Correto!",
+      "incorrectMessage": "Incorreto!",
+      "completedTitle": "Completo",
+      "completedMessage": "Você acertou {countCorrectAnswer} vezes!",
+      "goBackButton": "Voltar"
     }
 }
