user data filled when register, + css fix navbar + username profile localization fix

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -57,6 +57,7 @@
     "answerPlaceholder": "Type your answer here"
   },
   "profile": {
+    "username": "Username",
     "firstName": "First Name:",
     "lastName": "Last Name:",
     "email": "Email:"
